<?xml version="1.0"?>
<package format="2">

  <name>precise_gazebo</name>
  <version>0.0.0</version>
  <description>The precise_gazebo package</description>

  <author     email="isura@rabot.us">Isura Ranatunga</author>
  <maintainer email="isura@rabot.us">Isura Ranatunga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rostopic</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>

</package>
