<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>precise_pavp6_ikfast_arm</name>
  <version>0.0.0</version>
  <description>The precise_pavp6_ikfast_arm package</description>

  <author     email="isura@rabot.us">Isura Ranatunga</author>
  <maintainer email="isura@rabot.us">Isura Ranatunga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/precise_pavp6_arm_moveit_ikfast_plugin_description.xml"/>
  </export>

  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>

</package>
